--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
   <div class="container">
     <div class="Jeremy">
-      <div class="profile-info">
+      <div class="jeremy-info">
         <img src="images/image-jeremy.png" alt="Jeremy Robson">
-        <div>
+        <div class="jeremy-details">
           <p>Report for</p>
           <h2>Jeremy Robson</h2>
         </div>
@@ -23,12 +23,12 @@
       </div>
     </div>
 
-    <div class="card work">
-      <div class="card-icon">
+    <div class="card-work">
+      <div class="work-icon">
         <img src="images/icon-work.svg" alt="Work Icon">
       </div>
-      <div class="card-content">
-        <div class="card-header">
+      <div class="work-content">
+        <div class="-header">
           <h3>Work</h3>
           <span>...</span>
         </div>
@@ -36,12 +36,12 @@
         <p>Last Week - 36hrs</p>
       </div>
     </div>
-    <div class="card play">
-      <div class="card-icon">
+    <div class="play">
+      <div class="play-icon">
         <img src="images/icon-play.svg" alt="Play Icon">
       </div>
-      <div class="card-content">
-        <div class="card-header">
+      <div class="play-content">
+        <div class="play-header">
           <h3>Play</h3>
           <span>...</span>
         </div>
@@ -49,12 +49,12 @@
         <p>Last Week - 8hrs</p>
       </div>
     </div>
-    <div class="card study">
-      <div class="card-icon">
+    <div class=" study">
+      <div class="study-icon">
         <img src="images/icon-study.svg" alt="Study Icon">
       </div>
-      <div class="card-content">
-        <div class="card-header">
+      <div class="study-content">
+        <div class="study-header">
           <h3>Study</h3>
           <span>...</span>
         </div>
@@ -62,12 +62,12 @@
         <p>Last Week - 7hrs</p>
       </div>
     </div>
-    <div class="card exercise">
-      <div class="card-icon">
+    <div class="exercise">
+      <div class="exercise-icon">
         <img src="images/icon-exercise.svg" alt="Exercise Icon">
       </div>
-      <div class="card-content">
-        <div class="card-header">
+      <div class="exercise-content">
+        <div class="exercise-header">
           <h3>Exercise</h3>
           <span>...</span>
         </div>
@@ -75,12 +75,12 @@
         <p>Last Week - 5hrs</p>
       </div>
     </div>
-    <div class="card social">
-      <div class="card-icon">
+    <div class=" social">
+      <div class="social-icon">
         <img src="images/icon-social.svg" alt="Social Icon">
       </div>
-      <div class="card-content">
-        <div class="card-header">
+      <div class="social-content">
+        <div class="social-header">
           <h3>Social</h3>
           <span>...</span>
         </div>
@@ -88,12 +88,12 @@
         <p>Last Week - 10hrs</p>
       </div>
     </div>
-    <div class="card selfcare">
-      <div class="card-icon">
+    <div class="selfcare">
+      <div class="selfcare-icon">
         <img src="images/icon-self-care.svg" alt="Self Care Icon">
       </div>
-      <div class="card-content">
-        <div class="card-header">
+      <div class="selfcare-content">
+        <div class="selfcare-header">
           <h3>Self Care</h3>
           <span>...</span>
         </div>
